--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-1. fix path to your installed Kaldi toolkit 
+1. fix path to your installed Kaldi toolkit in path.sh
 2. make script runnable chmod +x run.sh
 3. put your wav files in data/wav/ and execute run.sh:
 it will produce filter bank features in dir data. 
