Fixed README file, wrong attribute labels order

--- a/README
+++ b/README
@@ -7,4 +7,4 @@ Attribute scores will be saved in res/scores.txt in the next format:
 utterance_id [ <columns with attributes scores per each frame>]
 
 Columns in res/scores.txt correspond to the next attributes: 
-[ vowel voiced stop silence other nasal glides fricative ]
+[ fricative glides nasal other silence stop voiced vowel ]
