--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+# MULAN-dev
+This is very fresh version of MULAN repository. New updates will appear here first and then in stable repository MULAN.
+
 1. fix path to your installed Kaldi toolkit in path.sh
 2. make script runnable chmod +x run.sh
 3. put your wav files in data/wav/ and execute run.sh:
